--- a/scss/__header.scss
+++ b/scss/__header.scss
@@ -1,7 +1,11 @@
 .header{
     position: absolute;
-    z-index: 5;
+    z-index: 12;
     width: 100%;
+
+    .header__nav-btn{
+        display: none;
+    }
     &__contacts{
         display: flex;
         gap: 28px;
@@ -102,3 +106,162 @@
         }
     }
 }
+
+@media (max-width:1340px){
+    .header{
+        &__logo{
+            &-link{
+                text-decoration: none;
+            }
+    
+            &-text:first-child{
+                color: #4F8FF0;
+                font-size: 22px;
+                font-weight: 900;
+                text-transform: uppercase;
+                line-height: 150%;
+                
+            }
+            &-text:last-child{
+                color: #fff;
+                font-size: 16px;
+                font-weight: 900;
+                text-transform: lowercase;
+                line-height: 150%;
+            }
+        }
+    }
+}
+
+
+@media (max-width:1024px){
+    .header{
+        .menu{
+
+            &__list{
+                position: absolute;
+                z-index: 5;
+                background-color: #222;
+                flex-direction: column;
+                align-items: left;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                padding-top: 100px;
+                padding-left: 20px;
+                height: 100vh;
+                transform: translateY(-100%);
+                transition: transform .3s ease;
+
+                &--active{
+                    transform: translateY(0);
+                }
+            }
+
+            &__item{
+                margin-bottom: 24px;
+                &-link{
+                    font-size: 16px;
+                    font-weight: 700;
+                }
+            }
+        }
+
+        .header__nav-btn{
+            display: block;
+            position: relative;
+            z-index: 10;
+            
+        }
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Nav Icon */
+.nav-icon-btn {
+    --time: 0.1s;
+    --width: 40px;
+    --height: 30px;
+    --line-height: 1px;
+    --line-margin: 2;
+    --color: #fff;
+  
+    height: var(--height);
+    width: var(--width);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    background-color: transparent;
+  }
+  
+  .nav-icon {
+    position: relative;
+    width: var(--width);
+    height: var(--line-height);
+    background-color: var(--color);
+
+    &--active{
+        padding-bottom: 150px;
+    }
+  }
+  
+  .nav-icon::before,
+  .nav-icon::after {
+    content: '';
+    display: block;
+  
+    position: absolute;
+    left: 0;
+  
+    width: var(--width);
+    height: var(--line-height);
+  
+    background-color: var(--color);
+    transition: transform var(--time) ease-in,
+    top var(--time) linear var(--time);
+  }
+  
+  .nav-icon::before {
+    top: calc(var(--line-height) * -8);
+  }
+  
+  .nav-icon::after {
+    top: calc(var(--line-height) * 8);
+  }
+  
+  .nav-icon.nav-icon--active {
+    background-color: transparent;
+  }
+  
+  .nav-icon.nav-icon--active::before,
+  .nav-icon.nav-icon--active::after {
+    top: 0;
+    transition: top var(--time) linear,
+    transform var(--time) ease-in var(--time);
+  }
+  
+  .nav-icon.nav-icon--active::before {
+    transform: rotate(45deg);
+  }
+  
+  .nav-icon.nav-icon--active::after {
+    transform: rotate(-45deg);
+  }
