--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,300;0,6..12,600;0,6..12,700;0,6..12,900;1,6..12,200&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,300;0,6..12,600;0,6..12,700;0,6..12,800;0,6..12,900;1,6..12,200&display=swap");
 * {
   box-sizing: border-box;
 }
@@ -16,10 +16,61 @@ body {
   line-height: 1.2;
 }
 
+.section-title {
+  font-size: 28px;
+  font-weight: 800;
+  line-height: 150%;
+  text-transform: uppercase;
+  color: #222;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.section-line {
+  width: 50px;
+  height: 3px;
+  background-color: #4F8FF0;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 24px;
+}
+
+.section-subtitle {
+  max-width: 920px;
+  font-size: 16px;
+  font-weight: 400;
+  color: #222;
+  padding: 0 10px;
+  text-align: center;
+  margin: 0 auto;
+  margin-bottom: 48px;
+}
+
+@media (max-width: 1340px) {
+  .section-title {
+    font-size: 24px;
+  }
+  .section-subtitle {
+    font-size: 16px;
+    max-width: 696px;
+  }
+}
+@media (max-width: 1024px) {
+  .section-title {
+    font-size: 20px;
+  }
+  .section-subtitle {
+    font-size: 14px;
+    max-width: 696px;
+  }
+}
 .header {
   position: absolute;
-  z-index: 5;
+  z-index: 12;
   width: 100%;
+}
+.header .header__nav-btn {
+  display: none;
 }
 .header__contacts {
   display: flex;
@@ -102,12 +153,130 @@ body {
   line-height: 150%;
 }
 
-.hero {
-  background: url("../img/hero.jpg");
-  height: 100vh;
-  width: 100%;
+@media (max-width: 1340px) {
+  .header__logo-link {
+    text-decoration: none;
+  }
+  .header__logo-text:first-child {
+    color: #4F8FF0;
+    font-size: 22px;
+    font-weight: 900;
+    text-transform: uppercase;
+    line-height: 150%;
+  }
+  .header__logo-text:last-child {
+    color: #fff;
+    font-size: 16px;
+    font-weight: 900;
+    text-transform: lowercase;
+    line-height: 150%;
+  }
+}
+@media (max-width: 1024px) {
+  .header .menu__list {
+    position: absolute;
+    z-index: 5;
+    background-color: #222;
+    flex-direction: column;
+    align-items: left;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding-top: 100px;
+    padding-left: 20px;
+    height: 100vh;
+    transform: translateY(-100%);
+    transition: transform 0.3s ease;
+  }
+  .header .menu__list--active {
+    transform: translateY(0);
+  }
+  .header .menu__item {
+    margin-bottom: 24px;
+  }
+  .header .menu__item-link {
+    font-size: 16px;
+    font-weight: 700;
+  }
+  .header .header__nav-btn {
+    display: block;
+    position: relative;
+    z-index: 10;
+  }
+}
+/* Nav Icon */
+.nav-icon-btn {
+  --time: 0.1s;
+  --width: 40px;
+  --height: 30px;
+  --line-height: 1px;
+  --line-margin: 2;
+  --color: #fff;
+  height: var(--height);
+  width: var(--width);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  background-color: transparent;
+}
+
+.nav-icon {
+  position: relative;
+  width: var(--width);
+  height: var(--line-height);
+  background-color: var(--color);
+}
+.nav-icon--active {
+  padding-bottom: 150px;
+}
+
+.nav-icon::before,
+.nav-icon::after {
+  content: "";
+  display: block;
   position: absolute;
-  padding-top: 310px;
+  left: 0;
+  width: var(--width);
+  height: var(--line-height);
+  background-color: var(--color);
+  transition: transform var(--time) ease-in, top var(--time) linear var(--time);
+}
+
+.nav-icon::before {
+  top: calc(var(--line-height) * -8);
+}
+
+.nav-icon::after {
+  top: calc(var(--line-height) * 8);
+}
+
+.nav-icon.nav-icon--active {
+  background-color: transparent;
+}
+
+.nav-icon.nav-icon--active::before,
+.nav-icon.nav-icon--active::after {
+  top: 0;
+  transition: top var(--time) linear, transform var(--time) ease-in var(--time);
+}
+
+.nav-icon.nav-icon--active::before {
+  transform: rotate(45deg);
+}
+
+.nav-icon.nav-icon--active::after {
+  transform: rotate(-45deg);
+}
+
+.hero {
+  position: absolute;
+  z-index: 5;
+  left: 0;
+  right: 0;
+  padding-top: 270px;
+  padding-bottom: 36px;
   text-align: center;
 }
 .hero__text:first-child {
@@ -138,8 +307,558 @@ body {
   text-transform: uppercase;
   text-decoration: none;
   padding: 16px 24px;
+  max-width: 158px;
   color: #fff;
   font-size: 14px;
   font-weight: 900;
   background-color: #4F8FF0;
+  margin: 0 auto;
+}
+
+.slider .swiper-slide {
+  height: 100vh;
+  background-size: cover;
+}
+.slider .swiper-pagination {
+  max-width: 1340px;
+  left: 50% !important;
+  transform: translate(-50%, -50%);
+  padding: 0 20px;
+  text-align: start;
+}
+.slider .swiper-pagination-bullet {
+  width: 4px;
+  height: 24px;
+  background-color: #fff;
+  border-radius: 0;
+  opacity: 1;
+}
+.slider .swiper-pagination-bullet-active {
+  height: 40px;
+  background-color: #4F8FF0;
+}
+.slider .slider-buttons {
+  position: absolute;
+  z-index: 10;
+  bottom: 3%;
+  right: 8%;
+}
+.slider .swiper-button-prev {
+  margin-left: 8px;
+}
+.slider .swiper-button-next {
+  margin-right: 8px;
+}
+
+@media (max-width: 1340px) {
+  .hero {
+    padding-top: 200px;
+    padding-bottom: 24px;
+  }
+  .hero__text:first-child {
+    font-size: 24px;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 300;
+    line-height: 150%;
+    margin-bottom: 8px;
+  }
+  .hero__text:nth-child(2) {
+    color: #4F8FF0;
+    font-size: 50px;
+    font-weight: 600;
+    text-transform: uppercase;
+    line-height: 150%;
+    margin-bottom: 8px;
+  }
+  .hero__text:nth-child(3) {
+    font-size: 18px;
+    margin: 0 auto;
+    font-weight: 400;
+    color: #fff;
+    max-width: 696px;
+    margin-bottom: 48px;
+  }
+}
+@media (max-width: 1024px) {
+  .hero {
+    padding-top: 250px;
+  }
+  .hero__text:first-child {
+    font-size: 18px;
+  }
+  .hero__text:nth-child(2) {
+    font-size: 30px;
+  }
+  .hero__text:nth-child(3) {
+    font-size: 16px;
+  }
+  .swiper-pagination {
+    display: none;
+  }
+  .slider-buttons {
+    display: none;
+  }
+}
+.uslugi {
+  padding: 80px 0;
+  background-color: #F7F7F7;
+}
+.uslugi__list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin-bottom: 48px;
+  gap: 38px 24px;
+}
+.uslugi-link {
+  max-width: 138px;
+  padding: 16px 24px;
+  text-transform: uppercase;
+  font-size: 14px;
+  display: block;
+  text-decoration: none;
+  margin: 0 auto;
+  background-color: #4F8FF0;
+  color: #fff;
+  font-weight: 900;
+}
+.uslugi__item {
+  background-color: #fff;
+  padding: 50px 32px;
+  max-width: 424px;
+  text-align: center;
+}
+.uslugi__item-img {
+  margin-bottom: 15px;
+}
+.uslugi__item-title {
+  margin-bottom: 10px;
+  font-size: 20px;
+  font-weight: 800;
+  line-height: 150%;
+  color: #222;
+}
+.uslugi__item-text {
+  font-size: 14px;
+  font-weight: 400;
+  color: #222;
+}
+.uslugi__item-link {
+  text-decoration: none;
+}
+
+@media (max-width: 1340px) {
+  .uslugi {
+    padding: 60px 0;
+  }
+  .uslugi__list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .uslugi__item {
+    padding: 30px 32px 40px 32px;
+  }
+}
+@media (max-width: 1024px) {
+  .uslugi {
+    padding: 40px 0;
+  }
+  .uslugi__list {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 24px;
+  }
+  .uslugi__item {
+    margin: 0 auto;
+    padding: 24px 16px 32px 16px;
+  }
+}
+.company {
+  padding: 80px 0;
+}
+.company__inner {
+  display: flex;
+  justify-content: space-between;
+}
+.company .section-title {
+  text-align: left;
+}
+.company .section-title span {
+  color: #4F8FF0;
+}
+.company .section-line {
+  margin: 0;
+  margin-bottom: 24px;
+}
+.company-text {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 150%;
+  max-width: 720px;
+  margin-bottom: 20px;
+}
+.company-text:last-child {
+  margin-bottom: 32px;
+}
+.company-history {
+  display: inline-block;
+  color: #fff;
+  margin-right: 24px;
+  text-decoration: none;
+  padding: 16px 24px;
+  background-color: #4F8FF0;
+  font-size: 14px;
+  font-weight: 900;
+  text-transform: uppercase;
+}
+.company-sertificats {
+  display: inline-block;
+  text-decoration: none;
+  color: #222;
+  padding: 16px 24px;
+  font-size: 14px;
+  font-weight: 900;
+  text-transform: uppercase;
+  background-color: #E6E6E6;
+}
+
+@media (max-width: 1340px) {
+  .company {
+    padding: 60px 0;
+  }
+  .company-img {
+    display: none;
+  }
+  .company-text {
+    max-width: 100%;
+  }
+}
+@media (max-width: 1024px) {
+  .company {
+    padding: 40px 0;
+  }
+}
+.lawyers {
+  background: #F7F7F7;
+  padding: 80px 0;
+  overflow-x: auto;
+}
+.lawyers__list {
+  display: flex;
+  gap: 0 24px;
+}
+.lawyers__item {
+  text-align: center;
+  background-color: #fff;
+  padding: 0 0 24px 0;
+  box-shadow: 2px 2px 12px 0px rgba(33, 33, 33, 0.12);
+}
+.lawyers__item-title {
+  margin-top: 24px;
+  font-size: 16px;
+  font-weight: 700;
+  margin-bottom: 10px;
+  color: #222;
+}
+.lawyers__item-info {
+  text-transform: lowercase;
+  font-size: 14px;
+  font-weight: 300;
+  color: #222;
+}
+
+@media (max-width: 1340px) {
+  .lawyers {
+    padding: 60px 0;
+  }
+}
+@media (max-width: 1024px) {
+  .lawyers {
+    padding: 40px 0;
+  }
+}
+.clients {
+  padding: 80px 0;
+  background-image: url("../img/clients.jpg");
+  background-size: cover;
+  height: 580px;
+}
+.clients .section-title {
+  text-align: left;
+}
+.clients .section-line {
+  margin: 0;
+  margin-bottom: 48px;
+}
+.clients-top {
+  display: flex;
+  justify-content: space-between;
+}
+.clients-top .buttons {
+  padding-top: 15px;
+}
+.clients-top .buttons .swiper-button-prev2, .clients-top .buttons .swiper-button-next2 {
+  position: static;
+  display: inline-block;
+  margin-top: 0;
+  cursor: pointer;
+}
+.clients .swiper-slide {
+  padding: 32px;
+  max-width: 648px;
+  background-color: #fff;
+  box-shadow: 2px 2px 10px 0px rgba(33, 33, 33, 0.15);
+}
+.clients .slider__inner-main {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+.clients .slider__inner-text {
+  font-size: 14px;
+  font-weight: 300;
+}
+.clients .slider__inner-name {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 150%;
+}
+.clients .slider__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.clients .swiper-slide__text {
+  margin-top: 16px;
+}
+.clients-comments {
+  display: inline-block;
+  text-decoration: none;
+  color: #fff;
+  padding: 16px 24px;
+  background-color: #4F8FF0;
+  margin-top: 32px;
+  font-size: 14px;
+  font-weight: 900;
+  margin-right: 24px;
+}
+.clients-makecomment {
+  display: inline-block;
+  text-decoration: none;
+  background-color: #E6E6E6;
+  margin-top: 32px;
+  color: #222;
+  padding: 16px 24px;
+  font-size: 14px;
+  font-weight: 900;
+}
+
+@media (max-width: 1024px) {
+  .clients {
+    padding: 40px 0;
+  }
+}
+.materials {
+  padding: 80px 0;
+}
+.materials__list {
+  display: flex;
+  gap: 0 24px;
+  margin-bottom: 48px;
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+.materials-link {
+  font-size: 14px;
+  font-weight: 900;
+  text-transform: uppercase;
+  padding: 16px 24px;
+  display: block;
+  max-width: 153px;
+  margin: 0 auto;
+  background-color: #4F8FF0;
+  color: #fff;
+  text-decoration: none;
+}
+.materials__item-img {
+  margin-bottom: 24px;
+}
+.materials__item-title {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 150%;
+  margin-bottom: 16px;
+}
+.materials__item-date {
+  font-size: 12px;
+  font-weight: 300;
+  margin-bottom: 16px;
+}
+.materials__item-text {
+  max-width: 424px;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+@media (max-width: 1024px) {
+  .materials {
+    padding: 40px 0;
+  }
+}
+.footer {
+  padding-top: 80px;
+  background-color: #222;
+}
+.footer__top {
+  margin-bottom: 48px;
+}
+.footer__top-text {
+  color: #F8F5F4;
+  max-width: 862px;
+}
+.footer__top-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+.footer__logo-link {
+  text-decoration: none;
+}
+.footer__logo-text:first-child {
+  color: #4F8FF0;
+  font-size: 28px;
+  font-weight: 900;
+  text-transform: uppercase;
+  line-height: 150%;
+}
+.footer__logo-text:last-child {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 900;
+  text-transform: lowercase;
+  line-height: 150%;
+}
+.footer-line {
+  height: 1px;
+  opacity: 0.2;
+  background: #8C8C8C;
+  margin-bottom: 48px;
+}
+.footer .footer__column-items {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  margin-bottom: 24px;
+}
+.footer .footer__column-items:last-child {
+  margin-bottom: 0;
+}
+.footer__item-img {
+  padding: 11px;
+  background-color: #2C2C2C;
+}
+.footer__item-text:first-child {
+  color: #8C8C8C;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 150%;
+}
+.footer__item-text:last-child {
+  color: #fff;
+  font-size: 16px;
+  font-weight: 700;
+}
+.footer__item-text:last-child a {
+  text-decoration: none;
+  color: #fff;
+}
+.footer .footer__menu-item {
+  margin-bottom: 16px;
+}
+.footer .footer__item-link {
+  text-decoration: none;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+.footer .footer__item-link:hover {
+  color: #4F8FF0;
+}
+.footer__column-inner {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  margin-bottom: 16px;
+}
+.footer .footer__column-name {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 150%;
+}
+.footer .footer__column-info {
+  font-size: 14px;
+  font-weight: 300;
+  color: #fff;
+}
+.footer .footer__column-text {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 150%;
+  color: #fff;
+  max-width: 424px;
+  margin-bottom: 24px;
+}
+.footer .footer__column-link {
+  padding: 16px 24px;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 900;
+  text-transform: uppercase;
+  text-decoration: none;
+  display: inline-block;
+  background-color: #4F8FF0;
+}
+.footer .footer__bottom {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 80px;
+}
+.footer__private {
+  padding: 16px 0;
+  background: #181818;
+}
+.footer__private-inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.footer__private-item {
+  font-size: 14px;
+  font-weight: 400;
+  color: #fff;
+}
+
+@media (max-width: 1340px) {
+  .footer .footer__top-text {
+    display: none;
+  }
+  .footer .footer__column-two {
+    display: none;
+  }
+}
+@media (max-width: 1024px) {
+  .footer {
+    padding-top: 40px;
+  }
+  .footer .footer__logo {
+    margin: 0 auto;
+  }
+  .footer .footer__bottom {
+    flex-direction: column;
+    gap: 47px;
+  }
+  .footer .footer__private-inner {
+    flex-direction: column;
+    gap: 8px;
+  }
 }/*# sourceMappingURL=main.css.map */
