--- a/scss/__hero.scss
+++ b/scss/__hero.scss
@@ -1,10 +1,12 @@
 .hero{
-    background: url('../img/hero.jpg');
-    height: 100vh;
-    width: 100%;
     position: absolute;
-    padding-top: 310px;
+    z-index: 5;
+    left: 0;
+    right: 0;
+    padding-top: 270px;
+    padding-bottom: 36px;
     text-align: center;
+    
     &__text:first-child{
         font-size: 30px;
         color: #fff;
@@ -34,13 +36,149 @@
         text-transform: uppercase;
         text-decoration: none;
         padding: 16px 24px;
+        max-width: 158px;
         color: #fff;
         font-size: 14px;
         font-weight: 900;
         background-color: #4F8FF0;
+        margin: 0 auto;
+        
+        
     }
 
-    &__bottom{
+    
+    
+
+    // &__bottom{
         
+        
+    //     &-first{
+    //         display: flex;
+    //         width: 28px;
+    //         gap: 8px;
+    //         align-items: flex-end;
+    //         span{
+        
+    //             height: 24px;
+    //             width: 4px;
+    //             background-color: #fff;
+                
+    //         }
+    //         .item:first-child{
+    //             height: 40px;
+    //             background-color: #4F8FF0;
+    //         }
+            
+    //     }
+    // }
+}
+
+.slider{
+
+.swiper-slide{
+    height: 100vh;
+    background-size: cover;
+}
+
+// .slider-wrapper{
+//     position: absolute;
+    
+// }
+
+.swiper-pagination{
+    max-width: 1340px;
+    // top:50% !important;
+    left:50% !important;
+    transform:translate(-50%, -50%);
+    padding: 0 20px;
+    text-align: start;
+    
+}
+
+.swiper-pagination-bullet{
+    width: 4px;
+    height: 24px;
+    background-color: #fff;
+    border-radius: 0;
+    
+    opacity: 1;
+}
+
+.swiper-pagination-bullet-active{
+    height: 40px;
+    background-color: #4F8FF0;
+}
+
+
+
+.slider-buttons{
+    position: absolute;
+    z-index: 10;
+    bottom: 3%;
+    right: 8%;
+    
+}
+
+.swiper-button-prev{
+    margin-left: 8px;
+}
+
+.swiper-button-next{
+    margin-right: 8px;
+}
+
+}
+
+@media (max-width:1340px){
+    .hero{
+        padding-top: 200px;
+        padding-bottom: 24px;
+        &__text:first-child{
+            font-size: 24px;
+            color: #fff;
+            text-transform: uppercase;
+            font-weight: 300;
+            line-height: 150%;
+            margin-bottom: 8px;
+        }
+        &__text:nth-child(2){
+            color: #4F8FF0;
+            font-size: 50px;
+            font-weight: 600;
+            text-transform: uppercase;
+            line-height: 150%;
+            margin-bottom: 8px;
+        }
+        &__text:nth-child(3){
+            font-size: 18px;
+            margin: 0 auto;
+            font-weight: 400;
+            color: #fff;
+            max-width: 696px;
+            margin-bottom: 48px;
+        }
+    }
+}
+
+@media (max-width:1024px){
+    .hero{
+        padding-top: 250px;
+        &__text:first-child{
+            font-size: 18px;
+        }
+        &__text:nth-child(2){
+            font-size: 30px;
+        }
+        &__text:nth-child(3){
+            font-size: 16px;
+        }
+    }
+
+    .swiper-pagination{
+        display: none;
+    }
+    
+    .slider-buttons{
+        display: none;
     }
 }
