--- a/scss/__footer.scss
+++ b/scss/__footer.scss
@@ -184,18 +184,23 @@
     .footer{
         padding-top: 40px;
 
+        &__top{
+            margin-bottom: 24px;
+        }
+
         .footer__logo{
             margin: 0 auto;
         }
 
         .footer__bottom{
             flex-direction: column;
-            
+            margin-bottom: 40px;
             gap: 47px;
         }
         .footer__private-inner{
             flex-direction: column;
             gap:8px
         }
+
     }
 }
