--- a/scss/__header.scss
+++ b/scss/__header.scss
@@ -174,6 +174,11 @@
             z-index: 10;
             
         }
+
+        &__contacts{
+            flex-direction: column;
+            gap: 8px;
+        }
     }
 }
 
