--- a/scss/__uslugi.scss
+++ b/scss/__uslugi.scss
@@ -55,7 +55,8 @@
         padding: 60px 0;
 
         &__list{
-            grid-template-columns: repeat(2,1fr);
+            
+            // grid-template-columns: repeat(2,1fr);
         }
         &__item{
             padding:30px 32px 40px 32px;
@@ -70,12 +71,15 @@
         padding: 40px 0;
 
         &__list{
-            grid-template-columns: repeat(1,1fr);
+            display: flex;
+            overflow-y: auto;
             
             gap: 24px;
         }
 
         &__item{
+            min-width: 250px;
+            max-height: 300px;
             margin: 0 auto;
             padding:24px 16px 32px 16px;
         }
